<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter_daysUntil"
        android:icon="@drawable/days"
        android:title="@string/daysUntil"
        app:actionLayout="@layout/days_until_min_max"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_filter_attendees"
        android:icon="@drawable/attendees"
        android:title="@string/attendees"
        app:actionLayout="@layout/attendees_min_max"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

</menu>